// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render ExpensesSummary with 1 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $115.00
  </h1>
</div>
`;

exports[`Should correctly render ExpensesSummary with muliple 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totaling 
    $1,154.00
  </h1>
</div>
`;
